# desafio-python-angular

./: .dockerignore  .gitignore  README.md  docker-compose.yml
back/: Dockerfile  api.py  app.py  global_error.py  pyproject.toml  requests.http  worker.py
back/alembic/: env.py
back/alembic/versions/: df75ea270624_first_migrate_create_tables.py
back/app/: envs.py
back/app/auth/: __init__.py  add_token_to_response.py  auth_middlware.py  jwt_token.py
back/app/libs/: crypto.py  jwt.py  redis.py
back/app/models/: database.py
back/app/models/entities/: __init__.py  product_entitie.py  user_entitie.py
back/app/models/repository/: __init__.py  product_repository.py  user_repository.py
back/app/routes/: __init__.py  auth_routes.py  models.py  product_routes.py
back/app/services/: logger.py
back/app/utils/: clear_user.py  random.py
back/test/: auth_test.py  product_test.py
caddy/: Caddyfile
front/: Dockerfile  angular.json  package-lock.json  package.json
front/.angular/cache/21.2.0/front/: .tsbuildinfo
front/src/app/: app.routes.ts  app.ts
front/src/app/@types/: index.d.ts
front/src/app/components/ui/input/: input.component.html  input.component.ts
front/src/app/components/ui/label/: label.component.html  label.component.ts
front/src/app/guards/: auth-guard.ts  guest-guard.ts
front/src/app/pages/login/: login.page.html  login.page.ts
front/src/app/pages/products/: products.page.html  products.page.ts
front/src/app/services/: global_fetch.ts  token.ts
front/src/app/tests/: app.spec.ts
(+6 files in other folders)
